force-app/main/default/objects/Case_Referral_Attribute__c/Case_Referral_Attribute__c.object-meta.xml
<CustomObject>
    <label>Case Referral Attribute</label>
    <nameField>
        <label>Case Referral Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Referral Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>