force-app/main/default/objects/Case_Referral_Attribute__c/fields/Allegation_Type__c.field-meta.xml
<CustomField>
    <fullName>Allegation_Type__c</fullName>
    <label>Allegation Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing Error</fullName>
            </value>
            <value>
                <fullName>Upcoding/Miscoding</fullName>
            </value>
            <value>
                <fullName>Coordination of Benefits Error-TPL</fullName>
            </value>
            <value>
                <fullName>Coordination of Benefits Error-Patient</fullName>
            </value>
            <value>
                <fullName>Asset/Liability</fullName>
            </value>
            <value>
                <fullName>Medically Unnecessary Services</fullName>
            </value>
            <value>
                <fullName>Documentation Insufficient</fullName>
            </value>
            <value>
                <fullName>Provider Error</fullName>
            </value>
            <value>
                <fullName>Analytic-Outlier</fullName>
            </value>
            <value>
                <fullName>Duplicate Payment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>No Documentation</fullName>
            </value>
            <value>
                <fullName>Procedure Coding Error</fullName>
            </value>
            <value>
                <fullName>Diagnosis Coding Error</fullName>
            </value>
            <value>
                <fullName>Unbounding</fullName>
            </value>
            <value>
                <fullName>Number of Unit(s)</fullName>
            </value>
            <value>
                <fullName>Medically Unnecessary Service</fullName>
            </value>
            <value>
                <fullName>Policy Violation</fullName>
            </value>
            <value>
                <fullName>Insufficient Documentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>