force-app/main/default/objects/Case_Referral_Attribute__c/fields/Amount_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>Amount_at_Risk__c</fullName>
    <label>Amount at Risk</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>