force-app/main/default/objects/Case_Referral_Attribute__c/fields/Referral_Details__c.field-meta.xml
<CustomField>
    <fullName>Referral_Details__c</fullName>
    <label>Referral Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>