force-app/main/default/objects/Case_Referral_Attribute__c/fields/Total_Paid_Claims__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Claims__c</fullName>
    <label>Total Paid Claims</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>